# python-demo

./: .env  README.md  persisting_data.py  pyproject.toml
.github/workflows/: install-testing.yml
python_demo/: authentication.py  course.py  machine_learning.py  main.py  models.py
templates/: base.html  course.html  courses.html  home.html  index.html  predict.html  prediction.html  sign_up.html  success.html
tests/: activity.fit  course_test.py  test_python_demo.py
